--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,21 @@ body {
   font-family: 'Roboto', sans-serif;
 
 }
+h1 {
+  font-family: 'Dosis', sans-serif;
+}
+
+h2 {
+  font-family: 'Dosis', sans-serif;
+}
+
+h3 {
+  font-family: 'Dosis', sans-serif;
+}
+
+h4 {
+  font-family: 'Dosis', sans-serif;
+}
 
 .dosis {
   font-family: 'Dosis', sans-serif;
