--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
+  {% if page.layout == 'Gilles de Hollander, Brain Scientist' %}
+  <title>{{ page.title }}</title>
+  {% else %}
+  <title>Gilles de Hollander - {{ page.title }}</title>
+  {% endif %}
 </head>
 
 <body>
@@ -22,7 +27,7 @@
     <nav class="navbar navbar-expand-lg rounded bg-dark navbar-dark p-1" id="navbar">
       <div class="container">
         {% if page.layout != 'home' %}
-        <a href="#" class="navbar-brand h1">Gilles de Hollander, Brain Scientist</a>
+        <a href="{{ site.url }}" class="navbar-brand m-0"><h1>Gilles de Hollander, Brain Scientist<h1></a>
         {% endif %}
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -34,7 +39,7 @@
             {% for page in site.pages %}
             {% if page.layout == 'page' %}
             <li class="nav-item">
-              <a href="#learn" class="nav-link">{{ page.title }} </a>
+              <a href="{{ page.url }}" class="nav-link">{{ page.title }} </a>
             </li>
             {% endif %}
             {% endfor %}
@@ -48,15 +53,13 @@
     <div class='container mh-1 mt-2 p-4 rounded bg-light'>
       <div class="row justify-content-center text-right">
         <div class="row">
-          <div class="col-4">
+          <div class="col-3">
           </div>
           <div class="col-sm d-flex justify-content-start">
-            <h2 class="dosis">{{ page.title }}</h2>
+            <h1 class="dosis">{{ page.title }}</h1>
           </div>
         </div>
-        <p class="card-text">
           {{ content }}
-        </p>
       </div>
     </div>
 
@@ -67,7 +70,7 @@
       <div class="row mx-0 align-items-end">
         <div class="col-sm">
           <a href="https://www.econ.uzh.ch/en/people/researchers/hollander.html">
-            <img alt="University of Zurich" height="80" src="assets/imgs/uzh_logo.svg">
+            <img alt="University of Zurich" height="80" src="/assets/imgs/uzh_logo.svg">
           </a>
         </div>
         <div class="col-3 align-bottom text-end">
@@ -90,7 +93,10 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+
 </body>
+
 
 </html>
