--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -1,4 +1,4 @@
-<div class="row my-4">
+<div class="row">
   <div class="col-3 text-center">
 
     {% assign image_path = paper.path | split:'/' | last  %}
@@ -20,8 +20,8 @@
     {% if image_file %}<a data-bs-toggle="collapse" href="#abstract_{{paper_id}}" role="button" aria-expanded="false" aria-controls="abstract_{{paper_id}}"><img class="img-fluid rounded" src="{{ image_file.path }}"></a>{% endif %}
 
   </div>
-  <div class="col-9 text-align-left">
-    <h6 class="mb-1"><a class="link-dark text-decoration-none" href="{{ paper_url }}">{{ paper.title }} ({% if pdf_file %}<i class="fas fa-file-pdf"></i>{% endif %})</a></h6>
+  <div class="col-9 text-align-left align-middle mb-2 mt-2">
+    <h6 class="mb-1"><a class="link-dark text-decoration-none" href="{{ paper_url }}">{{ paper.title }} {% if pdf_file %}(<i class="fas fa-file-pdf"></i>){% endif %}</a></h6>
     <p class="text-muted mb-1"><small>
         {% for author_ in paper.authors %}
         {% if forloop.last %}
@@ -45,9 +45,9 @@
         {{ paper.abstract }}
       </div>
     </div>
-    <p  class="mb-2 mt-2">
-      <a data-bs-toggle="collapse" href="#abstract_{{paper_id}}" role="button" aria-expanded="false" aria-controls="abstract_{{paper_id}}">
-        Abstract
+    <p  class="m-0">
+      <a class="text-dark" data-bs-toggle="collapse" href="#abstract_{{paper_id}}" role="button" aria-expanded="false" aria-controls="abstract_{{paper_id}}">
+        Read more
       </a>
     </p>
 
