--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,11 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: default
 ---
 <div class="row">
   <div class="col-3 text-center">
-  <img src="/assets/imgs/picture_gilles.jpg" class="rounded mx-auto img-fluid" alt="Gilles" width="200"/>
+    <a href="{{ 'about' | relative_url }}" alt="About me">
+  <img src="/assets/imgs/picture_gilles2.png" class="rounded mx-auto img-fluid" alt="Gilles" width="250"/>
+  </a>
 </div>
     <div class="col-9">
     {{ content }}
