Include all publications

--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-2">
   <div class="col-3 text-center">
 
     {% assign image_path = paper.path | split:'/' | last  %}
@@ -46,11 +46,12 @@
       </div>
     </div>
     <p  class="m-0">
-      <a class="text-dark" data-bs-toggle="collapse" href="#abstract_{{paper_id}}" role="button" aria-expanded="false" aria-controls="abstract_{{paper_id}}">
-        Read more
-      </a>
+      <button type="button" class="btn btn-secondary btn-sm mt-2" data-bs-toggle="collapse" href="#abstract_{{paper_id}}" role="button" aria-expanded="false" aria-controls="abstract_{{paper_id}}">
+        Abstract...
+      </button>
     </p>
 
 
   </div>
 </div>
+<hr />
