--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,19 +88,19 @@
         <div class="col-3 align-bottom text-end">
           <div class="btn-group" role="group">
             <a href="mailto:gilles.de.hollander@gmail.com" role="button" class="btn btn-md btn-secondary">
-              <i class="fas fa-envelope-square fa-2x"></i>
+              <i class="fas fa-envelope-square fa-2x"  title="gilles.de.hollander@gmail.com"></i>
             </a>
             <a href="https://scholar.google.com/citations?user=vFqZH9kAAAAJ" role="button" class="btn btn-md btn-secondary">
-              <i class="ai ai-google-scholar-square ai-2x" aria-hidden="true"></i>
+              <i class="ai ai-google-scholar-square ai-2x" aria-hidden="true" title="Google Scholar"></i>
             </a>
             <a href="https://www.researchgate.net/profile/Gilles-De-Hollander" role="button" class="btn btn-md btn-secondary">
-              <i class="ai ai-researchgate-square ai-2x" aria-hidden="true"></i>
+              <i class="ai ai-researchgate-square ai-2x" aria-hidden="true" title="Researchgate"></i>
             </a>
             <a href="https://twitter.com/GillesdeH" role="button" class="btn btn-md btn-secondary">
-              <i class="fab fa-twitter-square fa-2x"></i>
+              <i class="fab fa-twitter-square fa-2x" title="Twitter"></i>
             </a>
             <a href="https://github.com/Gilles86" role="button" class="btn btn-md btn-secondary">
-              <i class="fab fa-github-square fa-2x"></i>
+              <i class="fab fa-github-square fa-2x"  title="GitHub"></i>
             </a>
           </div>
 
