--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -41,7 +41,7 @@
 
     </p>
     <div class="collapse" id="abstract_{{paper_id}}">
-      <div class="card card-body">
+      <div class="card card-body text-justify">
         {{ paper.abstract }}
       </div>
     </div>
@@ -54,4 +54,3 @@
 
   </div>
 </div>
-<hr />
