--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,7 +21,15 @@ h3 {
 }
 
 h4 {
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+h5 {
+  font-family: 'Roboto', sans-serif;
+}
+
+h6 {
+  font-family: 'Roboto', sans-serif;
 }
 
 .dosis {
