--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,13 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">  
   {% if page.layout == 'Gilles de Hollander' %}
   <title>{{ page.title }}</title>
   {% else %}
   <title>Gilles de Hollander - {{ page.title }}</title>
   {% endif %}
+  {% include analytics.html %}
 </head>
 
 <body>
