brain scientist iso Brain Scientist

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
   <div class="container mh-1 mt-0">
     <nav class="navbar navbar-expand-lg rounded bg-dark navbar-dark p-1" id="navbar">
       <div class="container">
-        <a href="{{ site.url }}" class="navbar-brand m-0"><h3>Gilles de Hollander, Brain Scientist<h3></a>
+        <a href="{{ site.url }}" class="navbar-brand m-0"><h3>Gilles de Hollander, brain scientist<h3></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
           <span class="navbar-toggler-icon"></span>
