--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/assets/css/main.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/assets/academicicon/css/academicons.min.css" />
-  <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
-  <link rel="stylesheet" href="/assets/fontawesome/css/brands.css" />
-  <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
+  <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/academicicon/css/academicons.min.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/fontawesome.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/brands.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/solid.css" />
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
