--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- CSS Links -->
   <link href="/assets/css/main.css" rel="stylesheet" />
   <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/academicicon/css/academicons.min.css" />
@@ -12,23 +14,23 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/brands.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/solid.css" />
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">  
-  {% if page.layout == 'Gilles de Hollander' %}
-  <title>{{ page.title }}</title>
-  {% else %}
-  <title>Gilles de Hollander - {{ page.title }}</title>
-  {% endif %}
+  
+  <!-- Title Logic -->
+  <title>{{ page.title }} - Gilles de Hollander</title>
+
+  <!-- Analytics Include -->
   {% include analytics.html %}
 </head>
 
 <body>
   <!-- Navbar -->
-  <div class="container mh-1 mt-0">
-    <nav class="navbar navbar-expand-lg rounded bg-dark navbar-dark p-1" id="navbar">
+  <div class="container mt-0">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark rounded p-1">
       <div class="container">
-        <a href="{{ site.url }}" class="navbar-brand m-0"><h3>Gilles de Hollander, brain scientist<h3></a>
+        <a href="{{ site.url }}" class="navbar-brand m-0">
+          <h3>Gilles de Hollander, brain scientist</h3>
+        </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
           <span class="navbar-toggler-icon"></span>
@@ -37,11 +39,11 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto h2 dosis text-uppercase">
             {% for page in site.pages %}
-            {% if page.layout == 'page' %}
-            <li class="nav-item">
-              <a href="{{ page.url }}" class="nav-link">{{ page.title }} </a>
-            </li>
-            {% endif %}
+              {% if page.layout == 'page' %}
+                <li class="nav-item">
+                  <a href="{{ page.url }}" class="nav-link">{{ page.title }}</a>
+                </li>
+              {% endif %}
             {% endfor %}
           </ul>
         </div>
@@ -49,72 +51,71 @@
     </nav>
   </div>
 
+  <!-- Content Section -->
   <div class="container">
-    <div class='container mh-1 mt-2 p-4 rounded bg-light'>
-      <div class="row justify-content-center text-right">
-        <div class="row">
-          <div class="col-3">
-          </div>
-          <div class="col-sm d-flex justify-content-start mb-2">
-            <h1><u>{{ page.title }}</u></h1>
-          </div>
+    <div class="container mt-2 p-4 bg-light rounded">
+      
+      <!-- Header aligned with content -->
+      <div class="row">
+        <div class="col-3"></div> <!-- Empty space for alignment -->
+        <div class="col-9">
+          <h1 class="mb-2 text-start"><u>{{ page.title }}</u></h1>
         </div>
-        {% if page.simple_layout %}
-        <div class="row">
-          <div class="col-3 text-center">
-            {% if page.img %}
-            <img src="{{ page.img | relative_url }}" class="rounded mx-auto img-fluid" alt="Gilles" width="200"/>
-            {% endif %}
-          </div>
-          <div class="col-sm">
-            {{content}}
-          </div>
-        </div>
-        {% else %}
-          {{ content }}
-        {% endif %}
       </div>
-    </div>
-
-
-
-
-    <div class="mh-1 mt-2 p-4 rounded bg-light" style="--bs-bg-opacity: .75;">
-      <div class="row mx-0">
-        <div class="col-sm align-middle">
-          <a href="https://www.econ.uzh.ch/en/people/researchers/hollander.html">
-            <img alt="University of Zurich" height="50" src="/assets/imgs/uzh_logo.svg">
-          </a>
-        </div>
-
-        <div class="col-3 align-bottom text-end">
-          <div class="btn-group" role="group">
-            <a href="mailto:gilles.de.hollander@gmail.com" role="button" class="btn btn-md btn-secondary">
-              <i class="fas fa-envelope-square fa-2x"  title="gilles.de.hollander@gmail.com"></i>
-            </a>
-            <a href="https://scholar.google.com/citations?user=vFqZH9kAAAAJ" role="button" class="btn btn-md btn-secondary">
-              <i class="ai ai-google-scholar-square ai-2x" aria-hidden="true" title="Google Scholar"></i>
-            </a>
-            <a href="https://www.researchgate.net/profile/Gilles-De-Hollander" role="button" class="btn btn-md btn-secondary">
-              <i class="ai ai-researchgate-square ai-2x" aria-hidden="true" title="Researchgate"></i>
-            </a>
-            <a href="https://twitter.com/GillesdeH" role="button" class="btn btn-md btn-secondary">
-              <i class="fab fa-twitter-square fa-2x" title="Twitter"></i>
-            </a>
-            <a href="https://github.com/Gilles86" role="button" class="btn btn-md btn-secondary">
-              <i class="fab fa-github-square fa-2x"  title="GitHub"></i>
-            </a>
+  
+      <!-- Image and Content Logic -->
+      {% if page.simple_layout %}
+        <div class="row">
+          {% if page.img %}
+            <div class="col-3 text-center">
+              <img src="{{ page.img | relative_url }}" class="rounded img-fluid" alt="Gilles" width="200" />
+            </div>
+          {% endif %}
+          <div class="col-9">
+            {{ content }}
           </div>
+        </div>
+      {% else %}
+        {{ content }}
+      {% endif %}
+      
+    </div>
+  </div>
 
+  <div class="container">
+  <!-- Footer Section -->
+  <div class="container mt-2 p-4 bg-light rounded" style="--bs-bg-opacity: .75;">
+    <div class="row">
+      <div class="col-sm align-middle">
+        <a href="https://www.econ.uzh.ch/en/people/researchers/hollander.html">
+          <img alt="University of Zurich" height="50" src="/assets/imgs/uzh_logo.svg">
+        </a>
+      </div>
+      <div class="col-sm text-end">
+        <div class="btn-group" role="group">
+          <a href="mailto:gilles.de.hollander@gmail.com" class="btn btn-secondary">
+            <i class="fas fa-envelope-square fa-2x"></i>
+          </a>
+          <a href="https://scholar.google.com/citations?user=vFqZH9kAAAAJ" class="btn btn-secondary">
+            <i class="ai ai-google-scholar-square ai-2x"></i>
+          </a>
+          <a href="https://www.researchgate.net/profile/Gilles-De-Hollander" class="btn btn-secondary">
+            <i class="ai ai-researchgate-square ai-2x"></i>
+          </a>
+          <a href="https://twitter.com/GillesdeH" class="btn btn-secondary">
+            <i class="fab fa-twitter-square fa-2x"></i>
+          </a>
+          <a href="https://github.com/Gilles86" class="btn btn-secondary">
+            <i class="fab fa-github-square fa-2x"></i>
+          </a>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
-
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 
 </html>
