--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<div class="container">
+<!-- <div class="container"> -->
     {{ content }}
-  </div>
-</div>
+<!-- </div> -->
