--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <!-- CSS Links -->
-  <link href="/assets/css/main.css" rel="stylesheet" />
-  <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" />
+  <!-- Bootstrap CSS (v4.6.2) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS (should load after Bootstrap) -->
+  <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet" />
+
+  <!-- Other CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/academicicon/css/academicons.min.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/fontawesome.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/brands.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fontawesome/css/solid.css" />
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">  
-  
+
   <!-- Title Logic -->
   <title>{{ page.title }} - Gilles de Hollander</title>
 
@@ -114,7 +118,7 @@
   </div>
 </div>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap JS (v5.1.2) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
